hphp/hack/test/typecheck/supertype_shape_must_include_optional_fields_in_subtype_shape.php.exp
File "supertype_shape_must_include_optional_fields_in_subtype_shape.php", line 4, characters 10-33:
Invalid return type (Typing[4057])
File "supertype_shape_must_include_optional_fields_in_subtype_shape.php", line 3, characters 64-70:
The field `a` is missing
File "supertype_shape_must_include_optional_fields_in_subtype_shape.php", line 3, characters 15-35:
The field `a` is defined
